--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
 
-    <!----------------
+     <!----------------
     ---- Top Menu ----
     ----------------->
     <div class="container menu ">
@@ -129,9 +129,13 @@
     ---- Intro ----
     ----------------->
     <div id-="pctext1">
+        
         <div class="fixed-text">
+                <a href="https://facebook.com">F</a>
+            </div>
+        <!-- <div class="fixed-text">
             Elmelo Way
-        </div>
+        </div> -->
         <div class="elmelo-fixed-img">
             <img src="image/elmeloLogo.svg" height="50" width="50">
         </div>
